# SW_Safety_Socket/Cloud/src/swagger/swagger.json
@@ -450,6 +450,170 @@
                 ]
             }
         },
+        "/timer/all": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "servers": [
+                    {
+                        "url": "http://localhost:3000",
+                        "description": "User application port"
+                    }
+                ],
+                "summary": "Get all timer",
+                "description": "",
+                "responses": {
+                    "200": {
+                        "description": "successful",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "example": {
+                                    "device": "deviceUpdate._id"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "ACCESS_TOKEN": []
+                    },
+                    {
+                        "CLIENT_ID": []
+                    }
+                ]
+            }
+        },
+        "/timer/new": {
+            "post": {
+                "tags": [
+                    "user"
+                ],
+                "servers": [
+                    {
+                        "url": "http://localhost:3000",
+                        "description": "User application port"
+                    }
+                ],
+                "summary": "New timer",
+                "description": "",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "string"
+                            },
+                            "example": {
+                                "mac": "abcd1234",
+                                "timeset": 1735422405518,
+                                "state": true,
+                                "preset": true
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "successful",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "example": {
+                                    "device": "deviceUpdate._id"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Wrong mesh info",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "example": {
+                                    "message": "Wrong mesh info"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Couldn't set mesh",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "example": {
+                                    "message": "Couldn't set mesh"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "ACCESS_TOKEN": []
+                    },
+                    {
+                        "CLIENT_ID": []
+                    }
+                ]
+            }
+        },
+        "/timer/delete": {
+            "delete": {
+                "tags": [
+                    "user"
+                ],
+                "servers": [
+                    {
+                        "url": "http://localhost:3000",
+                        "description": "User application port"
+                    }
+                ],
+                "summary": "Delete timer",
+                "description": "",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "string"
+                            },
+                            "example": {
+                                "id": "676f970a4d6566fa7c3a252a"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "successful",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "ACCESS_TOKEN": []
+                    },
+                    {
+                        "CLIENT_ID": []
+                    }
+                ]
+            }
+        },
         "/manf/device/signup": {
             "post": {
                 "tags": [
